# TradeMaster2.0

./: .gitignore  main.py  pyproject.toml
bot/: client.py  commands.py
config/: sampleenv
core/: context.py  gatekeeper.py  llm.py  llm_engine.py
tools/: __init__.py  base_tool.py  browser_search.py  loader.py  market_trends.py  price_checker.py  registry.py
utils/: api_utils.py  gatekeeper.py  logging.py
